--- a/index.html
+++ b/index.html
@@ -2,13 +2,6 @@
 <html>
 	<head>
 	    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
-
-	    <style>
-			body{
-				margin: 0;
-				background-color: #432333;
-			}
-		</style>
 		
 		<script type="text/javascript" src="cordova.js"></script>
 	    <script type="text/javascript" src="js/gyil/phaser.min.js"></script>
@@ -16,5 +9,5 @@
 	    <script type="text/javascript" src="js/gyil/preloader.js"></script>
 	    <script type="text/javascript" src="js/gyil/main.js"></script>
 	</head>
-	<body><div></div></body>
+	<body style="margin: 0"><div></div></body>
 </html> 
